Graphql IDE shadow fix on dark mode
GitOrigin-RevId: ad9189bc743fe5b42a8f06b2ca2b978800c78f7d

--- a/docs-new/src/components/GraphiQLIDE/styles.css
+++ b/docs-new/src/components/GraphiQLIDE/styles.css
@@ -19,6 +19,13 @@
   box-shadow: -1px 2px 10px 2px rgba(217,217,217,1);
 }
 
+html[data-theme='dark'] .graphiql .graphiql-container {
+  border: 1px solid #777;
+  -webkit-box-shadow: -1px 2px 10px 2px rgba(24, 26, 28, 1);
+  -moz-box-shadow: -1px 2px 10px 2px rgba(24, 26, 28, 1);
+  box-shadow: -1px 2px 10px 2px rgba(24, 26, 28, 1);
+}
+
 .graphiql.with-vars .graphiql-container {
   min-height: 375px;
 }
